fix: Reservation width overflow Schedule size.

--- a/src/client/components/reservation/Reservation.scss
+++ b/src/client/components/reservation/Reservation.scss
@@ -1,6 +1,7 @@
 .reservation {
   display: flex;
-  height: 50vh;
+  width: 100%;
+  height: 100%;
 
   &__details {
     flex: 2
@@ -8,8 +9,6 @@
 
   &__schedule {
     flex: 1;
-    display: flex;
-    flex-direction: column;
     overflow: hidden;
     height: inherit;
   }
