--- a/src/client/components/reservation/Schedule.scss
+++ b/src/client/components/reservation/Schedule.scss
@@ -1,22 +1,33 @@
-.schedule {
-  overflow: scroll;
-  height: inherit;
-  position: relative;
+$cell-number-width: 30px;
 
-  &__cell {
-      height: 60px;
-      border: 1px solid black;
-  }
+.schedule {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 
   &__title {
-
+    display: flex;
+    font-size: 23px;
+    justify-content: center;
+    padding: 10px;
   }
+
+  &__content {
+      height: inherit;
+      overflow: scroll;
+      position: relative;
+  }
+}
+
+.schedule-cell {
+  height: 60px;
+  border: 1px solid black;
 }
 
 .schedule-reservation {
   position: absolute;
-  left: 30px;
-  width: 100%;
+  left: $cell-number-width;
+  width: calc(100% - #{$cell-number-width});
 
   &--existing {
     background-color: #6aa3ff;
