--- a/src/client/pages/Reservation/Reservation.scss
+++ b/src/client/pages/Reservation/Reservation.scss
@@ -1,6 +1,8 @@
 .reservation-layout {
+  display: flex;
   box-shadow: 0 0 25px 3px rgba(0,0,0,0.15);
   border-radius: 25px;
   margin: 24px;
   padding: 24px;
+  height: 70vh;
 }
